sprint 2 individual terminado, le podria agregar mas cosas